# equalizer

./: .gitignore  LICENSE  PKGBUILD  README.md  equalizerrc  meson.build  meson_options.txt  pulseaudio-equalizer.sublime-workspace
data/: com.github.pulseaudio-equalizer-ladspa.Equalizer.desktop  com.github.pulseaudio-equalizer-ladspa.Equalizer.gresource.xml  meson.build
data/presets/: Bass Boost.preset  Big Bass Boost.preset  Boosted.preset  Bose QuietComfort 35.preset  Classical.preset  Club.preset  Full Treble.preset  Large Hall.preset  Mi True Wireless EBs Basic.preset  Perfect EQ.preset  Slight Bass Boost.preset  Soft Rock.preset  Super Bass Boost.preset  Techno.preset  Teclast F6 Pro.preset  Xiaomi Mi Comfort.preset
data/ui/: Equalizer.ui  app-menu.ui
equalizer/: meson.build
pulseeq/: constants.py.in  equalizer.py  meson.build
share/applications/: pulseaudio-equalizer.desktop
share/pulseaudio-equalizer/: equalizer.ui  pulseaudio-equalizer.py
share/pulseaudio-equalizer/presets/: Bass Boost.preset  Dance.preset  Flat.preset  Full Bass & Treble.preset  Full Bass.preset  Headphones.preset  Laptop.preset  Live.preset  Party.preset  Pop.preset  Reggae.preset  Rock.preset  Ska.preset  Soft.preset  jjo-sony-MDR-V300.preset
